# cicdpipelinedemo

./: .cppcheck-suppressions  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: calculator.h  utils.h
src/: calculator.cpp  main.cpp  utils.cpp
tests/: test_calculator.cpp  test_utils.cpp
